--- a/Surf/index.html
+++ b/Surf/index.html
@@ -697,7 +697,7 @@
 		</div>
 		<div class="surf__slider slider-surf">
 
-			<div class="slider-surf__item" style="background-image: url(../img/slider-imgs/img1.jpg);">
+			<div class="slider-surf__item" style="background-image: url(img/slider-imgs/img1.jpg);">
 				<div class="slider-surf__bg"></div>
 				<div class="slider-surf__name">Airlie</br> Beach</div>
 				<div class="slider-surf__sub">Queensland <span>|</span> Australia</div>
@@ -710,7 +710,7 @@
 				</div>
 			</div>
 
-			<div class="slider-surf__item" style="background-image: url(../img/slider-imgs/img2.jpg);">
+			<div class="slider-surf__item" style="background-image: url(img/slider-imgs/img2.jpg);">
 				<div class="slider-surf__bg"></div>
 				<div class="slider-surf__name">Malibu</br> Beach</div>
 				<div class="slider-surf__sub">Queensland <span>|</span> Australia</div>
@@ -723,7 +723,7 @@
 				</div>
 			</div>
 
-			<div class="slider-surf__item" style="background-image: url(../img/slider-imgs/img3.jpg);">
+			<div class="slider-surf__item" style="background-image: url(img/slider-imgs/img3.jpg);">
 				<div class="slider-surf__bg"></div>
 				<div class="slider-surf__name">Airlie</br> Beach</div>
 				<div class="slider-surf__sub">Queensland <span>|</span> Australia</div>
@@ -736,7 +736,7 @@
 				</div>
 			</div>
 
-			<div class="slider-surf__item" style="background-image: url(../img/slider-imgs/img4.jpg);">
+			<div class="slider-surf__item" style="background-image: url(img/slider-imgs/img4.jpg);">
 				<div class="slider-surf__bg"></div>
 				<div class="slider-surf__name">Cloud</br> Beach</div>
 				<div class="slider-surf__sub">Queensland <span>|</span> Australia</div>
@@ -749,7 +749,7 @@
 				</div>
 			</div>
 
-			<div class="slider-surf__item" style="background-image: url(../img/slider-imgs/img1.jpg);">
+			<div class="slider-surf__item" style="background-image: url(img/slider-imgs/img1.jpg);">
 				<div class="slider-surf__bg"></div>
 				<div class="slider-surf__name">Vieux</br> Beach</div>
 				<div class="slider-surf__sub">Queensland <span>|</span> Australia</div>
@@ -762,7 +762,7 @@
 				</div>
 			</div>
 
-			<div class="slider-surf__item" style="background-image: url(../img/slider-imgs/img2.jpg);">
+			<div class="slider-surf__item" style="background-image: url(img/slider-imgs/img2.jpg);">
 				<div class="slider-surf__bg"></div>
 				<div class="slider-surf__name">Airlie</br> Beach</div>
 				<div class="slider-surf__sub">Queensland <span>|</span> Australia</div>
@@ -775,7 +775,7 @@
 				</div>
 			</div>
 
-			<div class="slider-surf__item" style="background-image: url(../img/slider-imgs/img3.jpg);">
+			<div class="slider-surf__item" style="background-image: url(img/slider-imgs/img3.jpg);">
 				<div class="slider-surf__bg"></div>
 				<div class="slider-surf__name">Airlie</br> Beach</div>
 				<div class="slider-surf__sub">Queensland <span>|</span> Australia</div>
@@ -788,7 +788,7 @@
 				</div>
 			</div>
 
-			<div class="slider-surf__item" style="background-image: url(../img/slider-imgs/img4.jpg);">
+			<div class="slider-surf__item" style="background-image: url(img/slider-imgs/img4.jpg);">
 				<div class="slider-surf__bg"></div>
 				<div class="slider-surf__name">Airlie Beach</div>
 				<div class="slider-surf__sub">Queensland <span>|</span> Australia</div>
