--- a/klava/index.html
+++ b/klava/index.html
@@ -9,9 +9,50 @@
 </head>
 
 <body>
+
    <div class="block">
 
    </div>
+
+   <!-- 
+   <audio id="audio" controls>
+      <source src="key2.mp3" type="audio/ogg; codecs=vorbis">
+      <source src="key2.mp3" type="audio/mpeg">
+      Тег audio не поддерживается вашим браузером.
+      <a href="key2.mp3">Скачайте музыку</a>.
+   </audio>
+
+
+
+   <audio id="audio2" controls>
+      <source src="key2.mp3" type="audio/ogg; codecs=vorbis">
+      <source src="key2.mp3" type="audio/mpeg">
+      Тег audio не поддерживается вашим браузером.
+      <a href="key2.mp3">Скачайте музыку</a>.
+   </audio>
+
+   <audio id="audio3" controls>
+      <source src="key2.mp3" type="audio/ogg; codecs=vorbis">
+      <source src="key2.mp3" type="audio/mpeg">
+      Тег audio не поддерживается вашим браузером.
+      <a href="key2.mp3">Скачайте музыку</a>.
+   </audio>
+
+   <audio id="audio4" controls>
+      <source src="key2.mp3" type="audio/ogg; codecs=vorbis">
+      <source src="key2.mp3" type="audio/mpeg">
+      Тег audio не поддерживается вашим браузером.
+      <a href="key2.mp3">Скачайте музыку</a>.
+   </audio>
+
+   <audio id="audio5" controls>
+      <source src="key2.mp3" type="audio/ogg; codecs=vorbis">
+      <source src="key2.mp3" type="audio/mpeg">
+      Тег audio не поддерживается вашим браузером.
+      <a href="key2.mp3">Скачайте музыку</a>.
+   </audio> -->
+
+
    <img src="klava.jpg" alt="">
    <script src="script.js">
 
