--- a/artur/index.html
+++ b/artur/index.html
@@ -29,11 +29,13 @@
 					</a>
 					<div class="header__about _anim-items _anim-no-hide">
 						<div class="header__email">
-							<picture><source srcset="img/mail.svg" type="image/webp"><img src="img/mail.svg" alt=""></picture>
+							<picture>
+								<source srcset="img/mail.svg" type="image/webp"><img src="img/mail.svg" alt=""></picture>
 							<a href="mailto:MAIL@buch24.RU">MAIL@buch24.RU</a>
 						</div>
 						<div class="header__tell">
-							<picture><source srcset="img/phone.svg" type="image/webp"><img src="img/phone.svg" alt=""></picture>
+							<picture>
+								<source srcset="img/phone.svg" type="image/webp"><img src="img/phone.svg" alt=""></picture>
 							<a href="tell:+78127644310">+7 (812) 764-43-10</a>
 						</div>
 					</div>
@@ -66,7 +68,8 @@
 				<div class="container">
 					<div class="top__inner">
 						<div class="top__image _anim-items _anim-no-hide">
-							<picture><source srcset="img/hero.webp" type="image/webp"><img src="img/hero.jpg" alt=""></picture>
+							<picture>
+								<source srcset="img/hero.webp" type="image/webp"><img src="img/hero.jpg" alt=""></picture>
 						</div>
 						<div class="top__info _anim-items _anim-no-hide">
 							<h3 class="top__title">Бухгалтер</h3>
@@ -87,29 +90,41 @@
 						<div class="offers__title _anim-items _anim-no-hide">ЧТО МЫ МОЖЕМ ВАМ ПРЕДЛОЖИТЬ</div>
 						<div class="offers__block">
 							<div class="offers__item _anim-items _anim-no-hide">
-								<picture><source srcset="img/message.webp" type="image/webp"><img src="img/message.png" alt=""></picture>
+								<picture>
+									<source srcset="img/message.webp" type="image/webp"><img src="img/message.png" alt="">
+								</picture>
 								<p class="offers__text">работа над налоговыми и целевыми предложениями </p>
 							</div>
 							<div class="offers__item _anim-items _anim-no-hide">
-								<picture><source srcset="img/message.webp" type="image/webp"><img src="img/message.png" alt=""></picture>
+								<picture>
+									<source srcset="img/message.webp" type="image/webp"><img src="img/message.png" alt="">
+								</picture>
 								<p class="offers__text">регулярное информирование о об изменениях налогового законодательства
 								</p>
 							</div>
 							<div class="offers__item _anim-items _anim-no-hide">
-								<picture><source srcset="img/message.webp" type="image/webp"><img src="img/message.png" alt=""></picture>
+								<picture>
+									<source srcset="img/message.webp" type="image/webp"><img src="img/message.png" alt="">
+								</picture>
 								<p class="offers__text">выделение юридических и финансовых преимуществ и недостатков </p>
 							</div>
 							<div class="offers__item _anim-items _anim-no-hide">
-								<picture><source srcset="img/message.webp" type="image/webp"><img src="img/message.png" alt=""></picture>
+								<picture>
+									<source srcset="img/message.webp" type="image/webp"><img src="img/message.png" alt="">
+								</picture>
 								<p class="offers__text">работа над налоговыми и целевыми предложениями </p>
 							</div>
 							<div class="offers__item _anim-items _anim-no-hide">
-								<picture><source srcset="img/message.webp" type="image/webp"><img src="img/message.png" alt=""></picture>
+								<picture>
+									<source srcset="img/message.webp" type="image/webp"><img src="img/message.png" alt="">
+								</picture>
 								<p class="offers__text">регулярное информирование о об изменениях налогового законодательства
 								</p>
 							</div>
 							<div class="offers__item _anim-items _anim-no-hide">
-								<picture><source srcset="img/message.webp" type="image/webp"><img src="img/message.png" alt=""></picture>
+								<picture>
+									<source srcset="img/message.webp" type="image/webp"><img src="img/message.png" alt="">
+								</picture>
 								<p class="offers__text">выделение юридических и финансовых преимуществ и недостатков </p>
 							</div>
 						</div>
@@ -122,11 +137,13 @@
 						<div class="people__block _anim-items _anim-no-hide">
 							<h4 class="people__title _anim-items _anim-no-hide">ДЛЯ ФИЗИЧЕСКИХ ЛИЦ</h4>
 							<div class="people__item">
-								<picture><source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
+								<picture>
+									<source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
 								<p class="people__text">Годовые отчеты и анализ</p>
 							</div>
 							<div class="people__item">
-								<picture><source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
+								<picture>
+									<source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
 								<p class="people__text">Налоговое планирование для снижения налоговой нагрузки
 								</p>
 							</div>
@@ -141,33 +158,40 @@
 							<h4 class="compain__title _anim-items _anim-no-hide">ДЛЯ КОМПАНИЙ
 							</h4>
 							<div class="compain__item">
-								<picture><source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
+								<picture>
+									<source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
 								<p class="compain__text">Рекомендации по налоговым последствиям планируемых решений</p>
 							</div>
 							<div class="compain__item">
-								<picture><source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
+								<picture>
+									<source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
 								<p class="compain__text">Консультации по налоговым льготам и инвестиционной помощи</p>
 							</div>
 							<div class="compain__item">
-								<picture><source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
+								<picture>
+									<source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
 								<p class="compain__text">Сравнение налоговой нагрузки
 
 								</p>
 							</div>
 							<div class="compain__item">
-								<picture><source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
+								<picture>
+									<source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
 								<p class="compain__text">Налоговое структурирование социальных договоров</p>
 							</div>
 							<div class="compain__item">
-								<picture><source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
+								<picture>
+									<source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
 								<p class="compain__text">Планирование и проектирование бизнеса</p>
 							</div>
 							<div class="compain__item">
-								<picture><source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
+								<picture>
+									<source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
 								<p class="compain__text">Прогноз ожидаемого налогового</p>
 							</div>
 							<div class="compain__item">
-								<picture><source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
+								<picture>
+									<source srcset="img/pin.svg" type="image/webp"><img src="img/pin.svg" alt=""></picture>
 								<p class="compain__text">Анализ краткосрочных и годовых отчетов</p>
 							</div>
 						</div>
@@ -179,7 +203,8 @@
 					<div class="price__inner">
 						<div class="price__title _anim-items _anim-no-hide">Цены на бухгалтерское обслуживание</div>
 						<div class="price__block">
-							<picture><source srcset="img/support.svg" type="image/webp"><img src="img/support.svg" alt=""></picture>
+							<picture>
+								<source srcset="img/support.svg" type="image/webp"><img src="img/support.svg" alt=""></picture>
 							<p class="price__text _anim-items _anim-no-hide">Ищете выгодные цены на бухгалтерское обслуживание
 								в
 								Санкт-Петербурге?
@@ -190,7 +215,8 @@
 						<div class="price__wrap">
 							<div class="price__title _anim-items _anim-no-hide">Принципы ценообразования </div>
 							<div class="price__block">
-								<picture><source srcset="img/lise.svg" type="image/webp"><img src="img/lise.svg" alt=""></picture>
+								<picture>
+									<source srcset="img/lise.svg" type="image/webp"><img src="img/lise.svg" alt=""></picture>
 								<p class="price__text _anim-items _anim-no-hide _anim-no-hide">На бухгалтерское обслуживание
 									цены в «Ленстрой 13» утверждены
 									с учётом
@@ -199,23 +225,28 @@
 							</div>
 							<div class="price__group">
 								<div class="price__item">
-									<picture><source srcset="img/gulg.webp" type="image/webp"><img src="img/gulg.png" alt=""></picture>
+									<picture>
+										<source srcset="img/gulg.webp" type="image/webp"><img src="img/gulg.png" alt=""></picture>
 									<div class="price__group-about">количество сотрудников, которым готовятся документы</div>
 								</div>
 								<div class="price__item">
-									<picture><source srcset="img/gulg.webp" type="image/webp"><img src="img/gulg.png" alt=""></picture>
+									<picture>
+										<source srcset="img/gulg.webp" type="image/webp"><img src="img/gulg.png" alt=""></picture>
 									<div class="price__group-about">количество подготавливаемых документов</div>
 								</div>
 								<div class="price__item">
-									<picture><source srcset="img/gulg.webp" type="image/webp"><img src="img/gulg.png" alt=""></picture>
+									<picture>
+										<source srcset="img/gulg.webp" type="image/webp"><img src="img/gulg.png" alt=""></picture>
 									<div class="price__group-about">количество обрабатываемых операций</div>
 								</div>
 								<div class="price__item">
-									<picture><source srcset="img/gulg.webp" type="image/webp"><img src="img/gulg.png" alt=""></picture>
+									<picture>
+										<source srcset="img/gulg.webp" type="image/webp"><img src="img/gulg.png" alt=""></picture>
 									<div class="price__group-about">наличие в организации штатного бухгалтера</div>
 								</div>
 								<div class="price__item">
-									<picture><source srcset="img/gulg.webp" type="image/webp"><img src="img/gulg.png" alt=""></picture>
+									<picture>
+										<source srcset="img/gulg.webp" type="image/webp"><img src="img/gulg.png" alt=""></picture>
 									<div class="price__group-about">объём передаваемых организацией работ</div>
 								</div>
 							</div>
@@ -274,7 +305,7 @@
 						<label for="">Введите email</label>
 						<input type="text" class="form__control" id="" name="user_email" placeholder="Введите email">
 					</div>
-					<button class="btn btn-primary">Отправить форму</button>
+					<button type="submit" class="btn btn-primary">Отправить форму</button>
 				</form>
 			</div>
 		</div>
